--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,6 +5,32 @@ stages:
     - src/get_data.py
     - data/processed/allsong_data.csv
     - data/processed/complete_feature.csv
+
+  get_features:
+    cmd: python src/features.py --config=params.yaml
+    deps:
+    - src/features.py
+    outs:
+    - data/processed/final_features.csv
+
+  model_training:
+    cmd: python src/model.py --config=params.yaml
+    deps:
+    - src/features.py
+    - src/model.py
+    - data/processed/allsong_data.csv
+    - data/processed/complete_feature.csv
+    - data/processed/final_feature.csv
+    outs:
+    - saved_models/model.joblib
+
+  # model_training:
+  #   cmd: python application/model.py
+  #   deps:
+  #     - data/complete_feature.csv
+  #     - data/allsong_data.csv
+  #   outs:
+  #     - saved_models/playlist_recommendation_model.joblib
   
 
   
