--- a/params.yaml
+++ b/params.yaml
@@ -20,4 +20,4 @@ model_dir: saved_models
 #webapp_model_dir
 
 #playlist URL
-playlist_url: "https://open.spotify.com/playlist/37i9dQZF1DXcBWIGoYBM5M"
+playlist_url: "https://open.spotify.com/playlist/2QTCxFav01RduLe1WXuiBt?si=ffbd73122bbe4488"
